--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"author": "João Vitor",
 	"name": "fcc-learn-npm-package-json",
 	"description": "A project that helps people learn NPM",
+	"keywords": ["freecodecamp", "descriptive", "helpful"],
 	"dependencies": {
 		"express": "^4.14.0"
 	},
