--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "A project that helps people learn NPM",
 	"keywords": ["freecodecamp", "descriptive", "helpful"],
 	"license": "MIT",
+	"version": "1.0",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
