add dependencies - moment

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"license": "MIT",
 	"version": "1.0",
 	"dependencies": {
+		"moment": "2.14.0",
 		"express": "^4.14.0"
 	},
 	"main": "server.js",
