--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"license": "MIT",
 	"version": "1.0",
 	"dependencies": {
-		"moment": "~2.10.2",
+		"moment": "^2.10.2",
 		"express": "^4.14.0"
 	},
 	"main": "server.js",
